# data_quality_impacts_rl

./: LICENSE  README.md  environment-citylearn-requirements-freeze.txt  environment-citylearn-requirements.txt  environment-citylearn.yaml  environment.yaml  pyproject.toml  quickstart-lambda-labs.sh  quickstart.sh
capstone.egg-info/: PKG-INFO  SOURCES.txt
experiments/: carbon_reward.py  run_experiment.sh  run_experiments.py  run_reports.py  run_sample.py
experiments/data/: 00_baseline.ipynb  01_dirty__building_power_dips.ipynb  02_dirty__building_outliers.ipynb  README.md  visualise_building_data.ipynb
experiments/data/00_raw/: building_real__2023.csv
experiments/data/01_preprocess/: building_real__2023.parquet  building_real__all_devices__2023_dirty.parquet  building_real__original_data.parquet  preprocess_building_real.ipynb
experiments/data/02_standard/: building_real.parquet  standard.ipynb
experiments/data/03_clean/: building_real.csv  clean_real_building.ipynb
experiments/data/datasets/baseline/: Building_1_missing.csv  Building_1_outliers.csv  Building_1_pristine.csv  baseline_carbon_intensity_history.csv  missing_ddpg_train.json  missing_eval.json  missing_rbc.json  missing_test.json  missing_train.json  outliers_ddpg.json  outliers_eval.json  outliers_td3_train.json  outliers_test.json  outliers_train.json  pristine_bas_eval.json  pristine_ddpg.json  pristine_ddpg_eval.json  pristine_ddpg_train.json  pristine_eval.json  pristine_test.json  pristine_train.json  schema_prototype.json
experiments/data/utils/: timestep.py
